# penny

./: .coverage  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  com.gpxl.naenae.plist  com.gpxl.penny.plist  config.yaml  config.yaml.template  install.sh  pyproject.toml  requirements.txt  test_interactive_inject.sh  test_popover.py
.claude/agents/: code-quality.md  commit.md  release.md  test-writer.md
.claude/rules/: branching.md  commands.md  penny-agents.md  plugin-architecture.md  testing.md  ux-principles.md
.claude/skills/penny-close/: SKILL.md
.claude/skills/penny-verify/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
Formula/: naenae.rb  penny.rb
NaeNae.app/Contents/: Info.plist
NaeNae.app/Contents/MacOS/: NaeNae
Penny.app/Contents/: Info.plist
Penny.app/Contents/MacOS/: Penny  penny_main.py
docs/: API.md  ARCHITECTURE.md  PLUGINS.md
launcher/: main.c
naenae/: analysis.py  app.py  bg_worker.py  dashboard.py  onboarding.py  paths.py  popover_vc.py  preflight.py  report.py  spawner.py  state.py  status_fetcher.py  ui_components.py
penny/: __init__.py  analysis.py  app.py  bg_worker.py  config_schema.py  dashboard.py  deps.py  log.py  onboarding.py  paths.py  plugin.py  popover_vc.py  preflight.py  report.py  spawner.py  state.py  status_fetcher.py  tasks.py  ui_components.py  update_checker.py
penny/plugins/: beads_plugin.py  loadout_plugin.py
scripts/: fake-health-alert.py  gen_icon.py  penny  release.sh  test_show_sonnet.py
tests/: conftest.py  test_analysis.py  test_analysis_property.py  test_app_logic.py  test_bg_worker.py  test_cli.py  test_dashboard.py  test_deps.py  test_e2e_journeys.py  test_loadout_plugin.py  test_onboarding.py  test_paths.py  test_plist_sync.py  test_plugin.py  test_preflight.py  test_report.py  test_spawner.py  test_spawner_integration.py  test_state.py  test_state_edge_cases.py  test_status_fetcher.py  test_tasks.py  test_update_checker.py
watcher/: analysis.py  app.py  report.py  spawner.py  state.py  tasks.py
