[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "naenae"
version = "0.1.0"
description = "Claude Max Capacity Monitor — macOS menu bar app"
requires-python = ">=3.9"
dependencies = [
    "pyobjc-core>=10.0",
    "pyobjc-framework-Cocoa>=10.0",
    "pyyaml>=6.0",
    "setproctitle>=1.3",
    "pexpect>=4.8",
    "pyte>=0.8",
]

[project.scripts]
naenae = "naenae.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["naenae*"]

[tool.setuptools.package-data]
naenae = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
